# rust-uinput

./: Cargo.toml
src/: lib.rs
src/event/: absolute.rs  controller.rs  keyboard.rs  relative.rs
