[package]
name    = "uinput"
version = "0.1.2"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Linux uinput wrapper."
repository  = "https://github.com/meh/rust-uinput"
keywords    = ["linux", "input"]

[dependencies]
libc       = "0.2"
nix        = "0.5"
uinput-sys = "0.1"
serde = "1.0"
serde_derive = "1.0"

macro-attr = "0.2"
enum_derive   = "0.1"

[dependencies.libudev]
optional = true
version  = "0.2"

[features]
default = ["udev"]
udev    = ["libudev"]
